# Particle-Simulator

./: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  Colour.cpp  Colour.h  ColourRandomizer.cpp  ColourRandomizer.h  DeltaTime.cpp  DeltaTime.h  Enumerators.cpp  Enumerators.h  Framework.cpp  Framework.h  GDIPlusHelperFunctions.cpp  GDIPlusHelperFunctions.h  MapSort.cpp  MapSort.h  Particle.cpp  Particle.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleSimulatorSettings.cpp  ParticleSimulatorSettings.h  README.md  Random.cpp  Random.h  SDLText.cpp  SDLText.h  StringFunctions.cpp  StringFunctions.h  Vector2.cpp  Vector2.h  Vector4.cpp  Vector4.h  VectorMath.cpp  VectorMath.h  main.cpp
simulator_settings/: Bouncy100_Large.txt  Bouncy500_Random.txt  Fountain1000_Medium.txt  Fountain2500.txt  Fountain500.txt  Fountain5000.txt  Fountain500_Medium.txt  Fountain750_Medium.txt  RandomPositions_20.txt
